--- a/perfil/usuariosapp/templates/registration/login.html
+++ b/perfil/usuariosapp/templates/registration/login.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar sesión</title>
+    <title>Login</title>
 </head>
 <body>
-    <h2>Iniciar sesión</h2>
+    <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Iniciar sesión</button>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
