--- a/perfil/usuariosapp/templates/registration/signup.html
+++ b/perfil/usuariosapp/templates/registration/signup.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
+    <title>Signup</title>
 </head>
 <body>
-    <h2>Registrarse</h2>
+    <h2>Signup</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Registrarse</button>
+        <button type="submit">Sign Up</button>
     </form>
 </body>
 </html>
