--- a/perfil/usuariosapp/templates/profile.html
+++ b/perfil/usuariosapp/templates/profile.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar perfil</title>
+    <title>Profile</title>
 </head>
 <body>
-    <h2>Editar perfil</h2>
+    <h2>Profile</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Guardar cambios</button>
+        <input type="file" name="profile_picture">
+        <button type="submit">Upload Profile Picture</button>
     </form>
 </body>
 </html>
